--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn app:app --timeout 300 --workers 1 --max-requests 1000 --max-requests-jitter 100 --preload 
+web: gunicorn app:app -k uvicorn.workers.UvicornWorker --timeout 120 --workers 1 --max-requests 1000 --max-requests-jitter 100 --preload
